# stack-trace

./: .env  docker-compose.yaml
backend/stack-trace/: .env  Dockerfile  docker-compose.back.yaml  pyproject.toml
backend/stack-trace/alembic/: env.py
backend/stack-trace/alembic/versions/: 0a8d5923a309_init_tables_user_device_metric_alert.py
backend/stack-trace/src/: config.py  depends.py  main.py  seed.py  websocket.py
backend/stack-trace/src/repositories/: repository.py
backend/stack-trace/src/routing/: router.py
backend/stack-trace/src/schemas/: enums.py  models.py  schemas.py
backend/stack-trace/src/security/: auth.py
backend/stack-trace/src/services/: service.py
backend/stack-trace/src/stack_trace_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
frontend/stack-trace/: Dockerfile  README.md  docker-compose.front.yaml  index.html  package-lock.json  package.json  vite.config.js
frontend/stack-trace/src/: App.jsx  index.css
frontend/stack-trace/src/components/: Layout.jsx  MetricBar.jsx  StatusBadge.jsx
frontend/stack-trace/src/context/: AppContext.jsx
frontend/stack-trace/src/i18n/: translations.js
frontend/stack-trace/src/pages/: AlertsPage.jsx  DashboardPage.jsx  DevicesDetailsPage.jsx  DevicesPage.jsx  LoginPage.jsx  UsersPage.jsx
frontend/stack-trace/src/utils/: api.js
infra/: docker-compose.infra.yaml
mock/: simulator.py
