[project]
name = "stack-trace-api"
version = "0.1.0"
description = "Stack Trace API"
requires-python = ">=3.12"
authors = [
    { name = "Arthur", email = "tishko.artyr@gmail.com" }
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "redis",
    "fastapi-cache2[redis]",
    "alembic",
    "asyncpg",
    "jinja2",
    "psycopg2-binary",
    "pydantic-settings",
    "PyJWT",
    "passlib",
    "pytest"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"